Changes in @NEW@:
  o New Features:
    * Groups now support pre-rollback scripts. (CNY-2908)

  o Server Changes:
    * Added paranoidCommits option which checks trove data has been stored
      properly in the SQL database before allowing the commit to complete.

Changes in 2.0.27:
  o New Features:
    * Metadata information can now be extracted from debian packages.
      (CNY-2995)

  o Client Changes:
    * The "conary rollback" command now handles --info and --interactive
      flags, which behave similarly to the "conary update" flags. (CNY-820)

  o Bug Fixes:
    * Conary no longer checks for the existence of a db journal on startup,
      making it possible to perform cvc operations while updating your
      system. (CNY-2958)
    * Files with (only) unsatisfied Java requirements that are filtered
      out using r.Requires(exceptDeps) no longer have their provides
      removed. (CNY-3001)
    * A bug that caused the frozen list of trove script compatibility
      information (created if using the "toClass=" keyword argument
      when adding a trove script) to be recorded in a random order has
      been fixed.  Because sorting the list causes a different Trove
      signature digest to be generated, this version of Conary
      introduces version 2 trove signatures.  Conary will ignore
      version 1 trove signatures on old troves that have multiple
      trove script compatibility entries.  (CNY-2997)

  o Build Changes:
    * A new type of metadata information, storing key-value pairs,
      is now available. (CNY-2983)

Changes in 2.0.26:
  o Build Changes:
    * The way that factories are cooked has been changed so that buildRequires
      are set (for building in rMake) and so that platforms may override the
      default build requirements. (CNY-2986)

  o Bug Fixes:
    * A bug causing cooks to fail when Perl was not installed on the
      build system has been fixed. (CNY-2989)
    * A bug that prevented Java dependencies from being parsed